--- a/session4/complete/session4.ipynb
+++ b/session4/complete/session4.ipynb
@@ -119,7 +119,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.112s\n",
+      "Ran 1 test in 0.108s\n",
       "\n",
       "OK\n"
      ]
@@ -264,7 +264,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
+      "Ran 1 test in 0.007s\n",
       "\n",
       "OK\n"
      ]
@@ -364,7 +364,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
+      "Ran 1 test in 0.003s\n",
       "\n",
       "OK\n"
      ]
@@ -400,7 +400,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.003s\n",
+      "Ran 1 test in 0.002s\n",
       "\n",
       "OK\n"
      ]
@@ -552,7 +552,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.004s\n",
+      "Ran 1 test in 0.002s\n",
       "\n",
       "OK\n"
      ]
@@ -628,7 +628,7 @@
     "t = Tx.parse(stream)\n",
     "# grab the input at index\n",
     "tx_in = t.tx_ins[index]\n",
-    "# use the sig_hash method on index and hash_type to get z\n",
+    "# use the sig_hash method on index to get z\n",
     "z = t.sig_hash(index)\n",
     "# combine the script_sig and script_pubkey\n",
     "combined_script = tx_in.script_sig + tx_in.script_pubkey()\n",
