--- a/session4/session4.ipynb
+++ b/session4/session4.ipynb
@@ -457,7 +457,7 @@
     "\n",
     "# grab the input at index\n",
     "\n",
-    "# use the sig_hash method on index and hash_type to get z\n",
+    "# use the sig_hash method on index to get z\n",
     "\n",
     "# combine the script_sig and script_pubkey\n",
     "\n",
