--- a/session8/session8.ipynb
+++ b/session8/session8.ipynb
@@ -11,7 +11,7 @@
     "# import everything and define a test runner function\n",
     "from importlib import reload\n",
     "from helper import run\n",
-    "import bloomfilter, merkleblock"
+    "import bloomfilter, network"
    ]
   },
   {
@@ -247,9 +247,20 @@
     "\n",
     "# wait for the merkleblock command\n",
     "\n",
-    "# wait for the tx command\n",
+    "# check that the merkle block's hash is the same as the block hash\n",
     "\n",
-    "# print the envelope payload in hex\n"
+    "\n",
+    "# check that the merkle block is valid\n",
+    "\n",
+    "\n",
+    "# loop through the tx hashes we are expecting using proved_txs\n",
+    "\n",
+    "    # wait for the tx command\n",
+    "\n",
+    "    # check that the tx hash is the same\n",
+    "\n",
+    "\n",
+    "    # print the transaction serialization in hex\n"
    ]
   },
   {
@@ -261,7 +272,7 @@
     "\n",
     "\n",
     "\n",
-    "#### Make [this test](/edit/session8/merkleblock.py) pass: `merkleblock.py:MerkleBlockTest:test_is_valid`"
+    "#### Make [this test](/edit/session8/network.py) pass: `network.py:SimpleNodeTest:test_get_filtered_txs`"
    ]
   },
   {
@@ -272,8 +283,8 @@
    "source": [
     "# Exercise 5\n",
     "\n",
-    "reload(merkleblock)\n",
-    "run(merkleblock.MerkleBlockTest('test_is_valid'))"
+    "reload(network)\n",
+    "run(network.SimpleNodeTest('test_get_filtered_txs'))"
    ]
   },
   {
@@ -283,7 +294,7 @@
     "### Exercise 6\n",
     "You have been sent some unknown amount of testnet bitcoins to your address.\n",
     "\n",
-    "Send all of it back (minus fees) to `mwJn1YPMq7y5F8J3LkC5Hxg9PHyZ5K4cFv` using only the networking protocol.\n",
+    "Send all of it back (minus fees) to `mqYz6JpuKukHzPg94y4XNDdPCEJrNkLQcv` using only the networking protocol.\n",
     "\n",
     "This should be a 1 input, 1 output transaction.\n",
     "\n",
@@ -300,26 +311,28 @@
     "\n",
     "from time import sleep\n",
     "from block import Block\n",
-    "from bloomfilter import BloomFilter, BIP37_CONSTANT\n",
+    "from bloomfilter import BloomFilter\n",
     "from ecc import PrivateKey\n",
-    "from helper import bit_field_to_bytes, decode_base58, hash160, hash256, little_endian_to_int, murmur3, SIGHASH_ALL\n",
+    "from helper import decode_base58, hash160, hash256, little_endian_to_int\n",
     "from merkleblock import MerkleBlock\n",
-    "from network import GetDataMessage, GetHeadersMessage, HeadersMessage, SimpleNode, FILTERED_BLOCK_DATA_TYPE, TX_DATA_TYPE\n",
+    "from network import GetHeadersMessage, HeadersMessage, SimpleNode\n",
     "from script import p2pkh_script\n",
     "from tx import Tx, TxIn, TxOut\n",
-    "last_block_hex = '<block hash from class>'  # CHANGE\n",
-    "last_block = bytes.fromhex(last_block_hex)\n",
+    "start_block_hex = '<block hash from class>'  # CHANGE\n",
+    "start_block = bytes.fromhex(start_block_hex)\n",
+    "end_block_hex = '<block hash from class>'  # CHANGE\n",
+    "end_block = bytes.fromhex(end_block_hex)\n",
     "passphrase = b'<your passphrase here>'  # CHANGE\n",
     "secret = little_endian_to_int(hash256(passphrase))\n",
     "private_key = PrivateKey(secret=secret)\n",
     "addr = private_key.point.address(testnet=True)\n",
     "h160 = decode_base58(addr)\n",
-    "target_address = 'mwJn1YPMq7y5F8J3LkC5Hxg9PHyZ5K4cFv'\n",
+    "target_address = 'mqYz6JpuKukHzPg94y4XNDdPCEJrNkLQcv'\n",
     "target_h160 = decode_base58(target_address)\n",
     "target_script = p2pkh_script(target_h160)\n",
     "bloom_filter = BloomFilter(30, 5, 90210)\n",
     "fee = 5000  # fee in satoshis\n",
-    "# connect to tbtc.programmingblockchain.com in testnet mode, logging True\n",
+    "# connect to tbtc.programmingblockchain.com in testnet mode\n",
     "\n",
     "# add the h160 to the bloom filter\n",
     "\n",
@@ -327,7 +340,7 @@
     "\n",
     "# send the 'filterload' message from the bloom filter\n",
     "\n",
-    "# create GetHeadersMessage with the last_block as the start_block\n",
+    "# create GetHeadersMessage with the start_block as the start_block and end_block as the end block\n",
     "\n",
     "# send a getheaders message\n",
     "\n",
@@ -336,22 +349,15 @@
     "# check that the headers are valid\n",
     "\n",
     "\n",
-    "# get merkle block request from the headers message and send it\n",
+    "# get all the block hashes from the headers.headers array\n",
     "\n",
-    "# while True\n",
+    "# get the filtered transactions from these blocks\n",
     "\n",
-    "    # wait for the merkleblock or tx commands\n",
+    "# loop through each filtered transaction\n",
     "\n",
-    "    # if we have the merkleblock command\n",
+    "    # use find_utxos to get utxos that belong to our address\n",
     "\n",
-    "        # check that the MerkleBlock is valid\n",
-    "\n",
-    "\n",
-    "    # else we have the tx command\n",
-    "\n",
-    "        # use find_utxos to get utxos that belong to our address\n",
-    "\n",
-    "        # if we have any utxos, break\n",
+    "    # if we have any utxos, break\n",
     "\n",
     "\n",
     "# prev_tx, prev_index, prev_amount are what we get in each utxo\n",
