--- a/session1/complete/session1.ipynb
+++ b/session1/complete/session1.ipynb
@@ -327,7 +327,7 @@
    "source": [
     "### Exercise 8\n",
     "#### BONUS QUESTION, ONLY ATTEMPT IF YOU HAVE TIME\n",
-    "Write a program to calculate \\\\(k^{30}\\\\) for all k in \\\\(F_{31}\\\\). Notice anything?\n"
+    "Write a program to calculate \\\\(i^{30}\\\\) for all i in \\\\(F_{31}\\\\). Notice anything?\n"
    ]
   },
   {
@@ -532,7 +532,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
