--- a/session1/session1.ipynb
+++ b/session1/session1.ipynb
@@ -225,7 +225,7 @@
    "source": [
     "### Exercise 8\n",
     "#### BONUS QUESTION, ONLY ATTEMPT IF YOU HAVE TIME\n",
-    "Write a program to calculate \\\\(k^{30}\\\\) for all k in \\\\(F_{31}\\\\). Notice anything?\n"
+    "Write a program to calculate \\\\(i^{30}\\\\) for all i in \\\\(F_{31}\\\\). Notice anything?\n"
    ]
   },
   {
