--- a/session6/complete/session6.ipynb
+++ b/session6/complete/session6.ipynb
@@ -37,7 +37,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.003s\n",
+      "Ran 1 test in 0.005s\n",
       "\n",
       "OK\n"
      ]
@@ -112,7 +112,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.013s\n",
+      "Ran 1 test in 0.002s\n",
       "\n",
       "OK\n"
      ]
@@ -299,7 +299,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.000s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
@@ -619,6 +619,7 @@
    "source": [
     "# Exercise 14\n",
     "\n",
+    "from io import BytesIO\n",
     "from block import Block\n",
     "hex_block = '04000000fbedbbf0cfdaf278c094f187f2eb987c86a199da22bbb20400000000000000007b7697b29129648fa08b4bcd13c9d5e60abb973a1efac9c8d573c71c807c56c3d6213557faa80518c3737ec1'\n",
     "# bytes.fromhex to get the binary block\n",
