--- a/session7/complete/session7.ipynb
+++ b/session7/complete/session7.ipynb
@@ -137,7 +137,7 @@
     "\n",
     "\n",
     "\n",
-    "#### Make [this test](/edit/session7/network.py) pass: `network.py:VersionMessageTest:test_serialize`"
+    "#### Make [this test](/edit/session7/network.py) pass: `network.py:GetHeadersMessageTest:test_serialize`"
    ]
   },
   {
@@ -161,7 +161,7 @@
     "# Exercise 4\n",
     "\n",
     "reload(network)\n",
-    "run(network.VersionMessageTest('test_serialize'))"
+    "run(network.GetHeadersMessageTest('test_serialize'))"
    ]
   },
   {
@@ -173,7 +173,7 @@
     "\n",
     "\n",
     "\n",
-    "#### Make [this test](/edit/session7/network.py) pass: `network.py:GetHeadersMessageTest:test_serialize`"
+    "#### Make [this test](/edit/session7/network.py) pass: `network.py:HeadersMessageTest:test_parse`"
    ]
   },
   {
@@ -197,48 +197,12 @@
     "# Exercise 5\n",
     "\n",
     "reload(network)\n",
-    "run(network.GetHeadersMessageTest('test_serialize'))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Exercise 6\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "#### Make [this test](/edit/session7/network.py) pass: `network.py:HeadersMessageTest:test_parse`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      ".\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
-      "\n",
-      "OK\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Exercise 6\n",
-    "\n",
-    "reload(network)\n",
     "run(network.HeadersMessageTest('test_parse'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +226,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 7\n",
+    "### Exercise 6\n",
     "\n",
     "\n",
     "\n",
@@ -272,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +252,7 @@
     }
    ],
    "source": [
-    "# Exercise 7\n",
+    "# Exercise 6\n",
     "\n",
     "reload(network)\n",
     "run(network.SimpleNodeTest('test_handshake'))"
@@ -296,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -352,13 +316,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 8\n",
+    "### Exercise 7\n",
     "Download the first 40,000 blocks for testnet and validate them.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -388,11 +352,11 @@
     }
    ],
    "source": [
-    "# Exercise 8\n",
+    "# Exercise 7\n",
     "\n",
     "from network import SimpleNode, GetHeadersMessage, HeadersMessage\n",
     "from block import TESTNET_GENESIS_BLOCK_HASH\n",
-    "# connect to tbtc.programmingblockchain.com\n",
+    "# connect to tbtc.programmingblockchain.com with testnet=True\n",
     "node = SimpleNode('tbtc.programmingblockchain.com', testnet=True)\n",
     "# handshake\n",
     "node.handshake()\n",
@@ -419,15 +383,15 @@
     "        # print the id every 2016 blocks (difficulty adjustment)\n",
     "        if current_height % 2016 == 0:\n",
     "            print(header.id())\n",
-    "        # increment the block count\n",
+    "        # increment the current_height\n",
     "        current_height += 1\n",
-    "        # set the last block hash\n",
+    "        # set the last_block_hash to the current header's hash\n",
     "        last_block_hash = header.hash()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +415,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 9\n",
+    "### Exercise 8\n",
     "Calculate the Merkle parent of these hashes:\n",
     "```\n",
     "f391da6ecfeed1814efae39e7fcb3838ae0b02c02ae7d0a5848a66947c0727b0\n",
@@ -461,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +437,7 @@
     }
    ],
    "source": [
-    "# Exercise 9\n",
+    "# Exercise 8\n",
     "\n",
     "from helper import hash256\n",
     "hex_hash1 = 'f391da6ecfeed1814efae39e7fcb3838ae0b02c02ae7d0a5848a66947c0727b0'\n",
@@ -491,7 +455,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 10\n",
+    "### Exercise 9\n",
     "\n",
     "\n",
     "\n",
@@ -501,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +481,7 @@
     }
    ],
    "source": [
-    "# Exercise 10\n",
+    "# Exercise 9\n",
     "\n",
     "reload(helper)\n",
     "run(helper.HelperTest('test_merkle_parent'))"
@@ -525,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +526,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 11\n",
+    "### Exercise 10\n",
     "Calculate the next Merkle Parent Level given these hashes\n",
     "```\n",
     "8b30c5ba100f6f2e5ad1e2a742e5020491240f8eb514fe97c713c31718ad7ecd\n",
@@ -575,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +553,7 @@
     }
    ],
    "source": [
-    "# Exercise 11\n",
+    "# Exercise 10\n",
     "\n",
     "from helper import merkle_parent\n",
     "hex_hashes = [\n",
@@ -620,7 +584,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 12\n",
+    "### Exercise 11\n",
     "\n",
     "\n",
     "\n",
@@ -630,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +610,7 @@
     }
    ],
    "source": [
-    "# Exercise 12\n",
+    "# Exercise 11\n",
     "\n",
     "reload(helper)\n",
     "run(helper.HelperTest('test_merkle_parent_level'))"
@@ -654,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +656,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 13\n",
+    "### Exercise 12\n",
     "Calculate the Merkle Root given these hashes\n",
     "```\n",
     "42f6f52f17620653dcc909e58bb352e0bd4bd1381e2955d19c00959a22122b2e\n",
@@ -711,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +687,7 @@
     }
    ],
    "source": [
-    "# Exercise 13\n",
+    "# Exercise 12\n",
     "\n",
     "from helper import merkle_parent_level\n",
     "hex_hashes = [\n",
@@ -755,7 +719,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 14\n",
+    "### Exercise 13\n",
     "\n",
     "\n",
     "\n",
@@ -765,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +745,7 @@
     }
    ],
    "source": [
-    "# Exercise 14\n",
+    "# Exercise 13\n",
     "\n",
     "reload(helper)\n",
     "run(helper.HelperTest('test_merkle_root'))"
@@ -789,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -820,7 +784,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 15\n",
+    "### Exercise 14\n",
     "Validate the merkle root for this block on Testnet:\n",
     "Block Hash:\n",
     "```\n",
@@ -845,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -857,7 +821,7 @@
     }
    ],
    "source": [
-    "# Exercise 15\n",
+    "# Exercise 14\n",
     "\n",
     "from helper import merkle_root\n",
     "want = '4297fb95a0168b959d1469410c7527da5d6243d99699e7d041b7f3916ba93301'\n",
@@ -886,7 +850,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 16\n",
+    "### Exercise 15\n",
     "\n",
     "\n",
     "\n",
@@ -896,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -905,14 +869,14 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.000s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
     }
    ],
    "source": [
-    "# Exercise 16\n",
+    "# Exercise 15\n",
     "\n",
     "reload(block)\n",
     "run(block.BlockTest('test_validate_merkle_root'))"
@@ -922,7 +886,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 17\n",
+    "### Exercise 16\n",
     "Validate the merkle root for this block on Testnet via network protocol:\n",
     "Block Hash:\n",
     "```\n",
@@ -932,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -944,7 +908,7 @@
     }
    ],
    "source": [
-    "# Exercise 17\n",
+    "# Exercise 16\n",
     "\n",
     "from network import SimpleNode, GetDataMessage, BLOCK_DATA_TYPE\n",
     "from block import Block\n",
@@ -974,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1005,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1052,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1108,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
