--- a/session7/session7.ipynb
+++ b/session7/session7.ipynb
@@ -104,7 +104,7 @@
     "\n",
     "\n",
     "\n",
-    "#### Make [this test](/edit/session7/network.py) pass: `network.py:VersionMessageTest:test_serialize`"
+    "#### Make [this test](/edit/session7/network.py) pass: `network.py:GetHeadersMessageTest:test_serialize`"
    ]
   },
   {
@@ -116,30 +116,6 @@
     "# Exercise 4\n",
     "\n",
     "reload(network)\n",
-    "run(network.VersionMessageTest('test_serialize'))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Exercise 5\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "#### Make [this test](/edit/session7/network.py) pass: `network.py:GetHeadersMessageTest:test_serialize`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Exercise 5\n",
-    "\n",
-    "reload(network)\n",
     "run(network.GetHeadersMessageTest('test_serialize'))"
    ]
   },
@@ -147,7 +123,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 6\n",
+    "### Exercise 5\n",
     "\n",
     "\n",
     "\n",
@@ -161,7 +137,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 6\n",
+    "# Exercise 5\n",
     "\n",
     "reload(network)\n",
     "run(network.HeadersMessageTest('test_parse'))"
@@ -185,7 +161,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 7\n",
+    "### Exercise 6\n",
     "\n",
     "\n",
     "\n",
@@ -199,7 +175,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 7\n",
+    "# Exercise 6\n",
     "\n",
     "reload(network)\n",
     "run(network.SimpleNodeTest('test_handshake'))"
@@ -237,7 +213,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 8\n",
+    "### Exercise 7\n",
     "Download the first 40,000 blocks for testnet and validate them.\n"
    ]
   },
@@ -247,11 +223,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 8\n",
+    "# Exercise 7\n",
     "\n",
     "from network import SimpleNode, GetHeadersMessage, HeadersMessage\n",
     "from block import TESTNET_GENESIS_BLOCK_HASH\n",
-    "# connect to tbtc.programmingblockchain.com\n",
+    "# connect to tbtc.programmingblockchain.com with testnet=True\n",
     "\n",
     "# handshake\n",
     "\n",
@@ -278,9 +254,9 @@
     "        # print the id every 2016 blocks (difficulty adjustment)\n",
     "\n",
     "\n",
-    "        # increment the block count\n",
+    "        # increment the current_height\n",
     "\n",
-    "        # set the last block hash\n"
+    "        # set the last_block_hash to the current header's hash\n"
    ]
   },
   {
@@ -301,7 +277,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 9\n",
+    "### Exercise 8\n",
     "Calculate the Merkle parent of these hashes:\n",
     "```\n",
     "f391da6ecfeed1814efae39e7fcb3838ae0b02c02ae7d0a5848a66947c0727b0\n",
@@ -315,7 +291,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 9\n",
+    "# Exercise 8\n",
     "\n",
     "from helper import hash256\n",
     "hex_hash1 = 'f391da6ecfeed1814efae39e7fcb3838ae0b02c02ae7d0a5848a66947c0727b0'\n",
@@ -332,7 +308,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 10\n",
+    "### Exercise 9\n",
     "\n",
     "\n",
     "\n",
@@ -346,7 +322,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 10\n",
+    "# Exercise 9\n",
     "\n",
     "reload(helper)\n",
     "run(helper.HelperTest('test_merkle_parent'))"
@@ -381,7 +357,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 11\n",
+    "### Exercise 10\n",
     "Calculate the next Merkle Parent Level given these hashes\n",
     "```\n",
     "8b30c5ba100f6f2e5ad1e2a742e5020491240f8eb514fe97c713c31718ad7ecd\n",
@@ -398,7 +374,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 11\n",
+    "# Exercise 10\n",
     "\n",
     "from helper import merkle_parent\n",
     "hex_hashes = [\n",
@@ -428,7 +404,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 12\n",
+    "### Exercise 11\n",
     "\n",
     "\n",
     "\n",
@@ -442,7 +418,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 12\n",
+    "# Exercise 11\n",
     "\n",
     "reload(helper)\n",
     "run(helper.HelperTest('test_merkle_parent_level'))"
@@ -480,7 +456,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 13\n",
+    "### Exercise 12\n",
     "Calculate the Merkle Root given these hashes\n",
     "```\n",
     "42f6f52f17620653dcc909e58bb352e0bd4bd1381e2955d19c00959a22122b2e\n",
@@ -503,7 +479,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 13\n",
+    "# Exercise 12\n",
     "\n",
     "from helper import merkle_parent_level\n",
     "hex_hashes = [\n",
@@ -534,7 +510,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 14\n",
+    "### Exercise 13\n",
     "\n",
     "\n",
     "\n",
@@ -548,7 +524,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 14\n",
+    "# Exercise 13\n",
     "\n",
     "reload(helper)\n",
     "run(helper.HelperTest('test_merkle_root'))"
@@ -579,7 +555,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 15\n",
+    "### Exercise 14\n",
     "Validate the merkle root for this block on Testnet:\n",
     "Block Hash:\n",
     "```\n",
@@ -608,7 +584,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 15\n",
+    "# Exercise 14\n",
     "\n",
     "from helper import merkle_root\n",
     "want = '4297fb95a0168b959d1469410c7527da5d6243d99699e7d041b7f3916ba93301'\n",
@@ -636,7 +612,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 16\n",
+    "### Exercise 15\n",
     "\n",
     "\n",
     "\n",
@@ -650,7 +626,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 16\n",
+    "# Exercise 15\n",
     "\n",
     "reload(block)\n",
     "run(block.BlockTest('test_validate_merkle_root'))"
@@ -660,7 +636,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 17\n",
+    "### Exercise 16\n",
     "Validate the merkle root for this block on Testnet via network protocol:\n",
     "Block Hash:\n",
     "```\n",
@@ -674,7 +650,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 17\n",
+    "# Exercise 16\n",
     "\n",
     "from network import SimpleNode, GetDataMessage, BLOCK_DATA_TYPE\n",
     "from block import Block\n",
@@ -847,7 +823,25 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.5"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 2
 }
