--- a/session2/complete/session2.ipynb
+++ b/session2/complete/session2.ipynb
@@ -110,7 +110,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.002s\n",
       "\n",
       "OK\n"
      ]
@@ -222,7 +222,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.002s\n",
       "\n",
       "OK\n"
      ]
@@ -439,7 +439,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.005s\n",
       "\n",
       "OK\n"
      ]
@@ -576,7 +576,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.058s\n",
+      "Ran 1 test in 0.178s\n",
       "\n",
       "OK\n"
      ]
@@ -648,6 +648,7 @@
    "source": [
     "# Exercise 10\n",
     "\n",
+    "from ecc import G\n",
     "secrets = (999**3, 123, 42424242)\n",
     "# iterate through secrets\n",
     "for secret in secrets:\n",
@@ -689,7 +690,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.015s\n",
+      "Ran 1 test in 0.069s\n",
       "\n",
       "OK\n"
      ]
@@ -760,6 +761,7 @@
     "# Exercise 12\n",
     "\n",
     "from ecc import G\n",
+    "from helper import encode_base58, hash160, hash256\n",
     "components = (\n",
     "    # (secret, compressed)\n",
     "    (888**3, True),\n",
@@ -809,7 +811,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.018s\n",
       "\n",
       "OK\n"
      ]
@@ -845,7 +847,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.015s\n",
+      "Ran 1 test in 0.084s\n",
       "\n",
       "OK\n"
      ]
@@ -889,7 +891,7 @@
     "secret = little_endian_to_int(hash256(passphrase))\n",
     "# get the public point\n",
     "point = secret*G\n",
-    "# if you completed 7.2, just do the .address(testnet=True) method on the public point\n",
+    "# if you completed exercise 14, just do the .address(testnet=True) method on the public point\n",
     "print(point.address(testnet=True))"
    ]
   }
@@ -910,7 +912,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
