--- a/session5/complete/session5.ipynb
+++ b/session5/complete/session5.ipynb
@@ -37,7 +37,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.211s\n",
+      "Ran 1 test in 0.437s\n",
       "\n",
       "OK\n"
      ]
@@ -120,7 +120,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.187s\n",
+      "Ran 1 test in 0.332s\n",
       "\n",
       "OK\n"
      ]
@@ -142,7 +142,7 @@
     "\n",
     "`mqYz6JpuKukHzPg94y4XNDdPCEJrNkLQcv`\n",
     "\n",
-    "#### Go here to send your transaction: https://live.blockcypher.com/btc-testnet/pushtx/\n"
+    "#### Go here to send your transaction: https://blockstream.info/testnet/tx/push\n"
    ]
   },
   {
@@ -343,7 +343,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.211s\n",
+      "Ran 1 test in 0.365s\n",
       "\n",
       "OK\n"
      ]
@@ -435,7 +435,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.004s\n",
       "\n",
       "OK\n"
      ]
@@ -471,7 +471,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.002s\n",
       "\n",
       "OK\n"
      ]
@@ -507,7 +507,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.002s\n",
       "\n",
       "OK\n"
      ]
@@ -658,7 +658,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
