--- a/session5/session5.ipynb
+++ b/session5/session5.ipynb
@@ -110,7 +110,7 @@
     "\n",
     "`mqYz6JpuKukHzPg94y4XNDdPCEJrNkLQcv`\n",
     "\n",
-    "#### Go here to send your transaction: https://live.blockcypher.com/btc-testnet/pushtx/\n"
+    "#### Go here to send your transaction: https://blockstream.info/testnet/tx/push\n"
    ]
   },
   {
