--- a/session6/session6.ipynb
+++ b/session6/session6.ipynb
@@ -379,6 +379,7 @@
    "source": [
     "# Exercise 12\n",
     "\n",
+    "from helper import little_endian_to_int\n",
     "hex_bits = 'f2881718'\n",
     "# bytes.fromhex to get the bits\n",
     "\n",
