--- a/session2/session2.ipynb
+++ b/session2/session2.ipynb
@@ -443,6 +443,7 @@
    "source": [
     "# Exercise 10\n",
     "\n",
+    "from ecc import G\n",
     "secrets = (999**3, 123, 42424242)\n",
     "# iterate through secrets\n",
     "\n",
@@ -521,6 +522,7 @@
     "# Exercise 12\n",
     "\n",
     "from ecc import G\n",
+    "from helper import encode_base58, hash160, hash256\n",
     "components = (\n",
     "    # (secret, compressed)\n",
     "    (888**3, True),\n",
@@ -617,29 +619,11 @@
     "secret = little_endian_to_int(hash256(passphrase))\n",
     "# get the public point\n",
     "\n",
-    "# if you completed 7.2, just do the .address(testnet=True) method on the public point\n"
+    "# if you completed exercise 14, just do the .address(testnet=True) method on the public point\n"
    ]
   }
  ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.5"
-  }
- },
+ "metadata": {},
  "nbformat": 4,
  "nbformat_minor": 2
 }
