--- a/session8/session8.ipynb
+++ b/session8/session8.ipynb
@@ -233,7 +233,7 @@
     "\n",
     "# add the h160 to the bloom filter\n",
     "\n",
-    "# connect to tbtc.programmingblockchain.com in testnet mode\n",
+    "# connect to testnet.programmingbitcoin.com in testnet mode\n",
     "\n",
     "# complete the handshake\n",
     "\n",
@@ -332,7 +332,7 @@
     "target_script = p2pkh_script(target_h160)\n",
     "bloom_filter = BloomFilter(30, 5, 90210)\n",
     "fee = 5000  # fee in satoshis\n",
-    "# connect to tbtc.programmingblockchain.com in testnet mode\n",
+    "# connect to testnet.programmingbitcoin.com in testnet mode\n",
     "\n",
     "# add the h160 to the bloom filter\n",
     "\n",
