--- a/session7/complete/session7.ipynb
+++ b/session7/complete/session7.ipynb
@@ -216,7 +216,7 @@
    "source": [
     "# Handshake Example\n",
     "from network import SimpleNode, VersionMessage, VerAckMessage\n",
-    "node = SimpleNode('tbtc.programmingblockchain.com', testnet=True)\n",
+    "node = SimpleNode('testnet.programmingbitcoin.com', testnet=True)\n",
     "version = VersionMessage()\n",
     "node.send(version)\n",
     "print(node.wait_for(VerAckMessage).command)"
@@ -293,7 +293,7 @@
     "# Block Header Download Example\n",
     "from network import GetHeadersMessage, HeadersMessage, SimpleNode\n",
     "from block import GENESIS_BLOCK_HASH\n",
-    "node = SimpleNode('btc.programmingblockchain.com', testnet=False)\n",
+    "node = SimpleNode('mainnet.programmingbitcoin.com', testnet=False)\n",
     "node.handshake()\n",
     "last_block_hash = GENESIS_BLOCK_HASH\n",
     "current_height = 1\n",
@@ -356,8 +356,8 @@
     "\n",
     "from network import SimpleNode, GetHeadersMessage, HeadersMessage\n",
     "from block import TESTNET_GENESIS_BLOCK_HASH\n",
-    "# connect to tbtc.programmingblockchain.com with testnet=True\n",
-    "node = SimpleNode('tbtc.programmingblockchain.com', testnet=True)\n",
+    "# connect to testnet.programmingbitcoin.com with testnet=True\n",
+    "node = SimpleNode('testnet.programmingbitcoin.com', testnet=True)\n",
     "# handshake\n",
     "node.handshake()\n",
     "# set the last block hash to the TESTNET_GENESIS_BLOCK_HASH\n",
@@ -914,8 +914,8 @@
     "from block import Block\n",
     "block_hex = '0000000000044b01a9440b34f582fe171c7b8642fedd0ebfccf8fdf6a1810900'\n",
     "block_hash = bytes.fromhex(block_hex)\n",
-    "# connect to tbtc.programmingblockchain.com on testnet\n",
-    "node = SimpleNode('tbtc.programmingblockchain.com', testnet=True)\n",
+    "# connect to testnet.programmingbitcoin.com on testnet\n",
+    "node = SimpleNode('testnet.programmingbitcoin.com', testnet=True)\n",
     "# handshake\n",
     "node.handshake()\n",
     "# create a GetDataMessage\n",
